Close #30 - Nicer copy

--- a/resources/views/about.twig
+++ b/resources/views/about.twig
@@ -5,8 +5,8 @@
 {% block content %}
     <div class="lead text-justify">
         <p>
-            The PHP internals are <a target="_blank" href="https://philsturgeon.uk/php/2013/09/12/solving-the-php-internals-workflow/">horrible</a>, it's not new, I know it, you know it.
-            Between the wiki, the mailing lists from 1997, the Github repository and so on, information is spread out across the web; difficult to access, to comprehend, and to participate in.
+            The PHP internals need <a target="_blank" href="https://philsturgeon.uk/php/2013/09/12/solving-the-php-internals-workflow/">to be improved</a>, it's not new, I know it, you know it.
+            Between the wiki, the dozens of mailing lists, the Github repository and so on, information is spread out across the web; difficult to access, to comprehend, and to participate in.
             If you're not familiar with it, it's an unwelcoming world to whomever might want to know more about advances in the PHP language.
         </p>
         <p>
