--- a/resources/assets/sass/components/_authors.scss
+++ b/resources/assets/sass/components/_authors.scss
@@ -1,3 +1,26 @@
+.user {
+    img {
+        max-width: 100%;
+        margin-bottom: 1rem;
+    }
+
+    h2, h3, .btn-group {
+        margin: 0.70rem 0;
+        line-height: 1;
+    }
+
+    h3 {
+        color: darken($color-grey, 10);
+        font-size: 1em;
+    }
+
+    .btn-group {
+        i {
+            margin-right: 0.25em;
+        }
+    }
+}
+
 .authors {
     display: flex;
     flex-direction: row;
@@ -9,9 +32,5 @@
         max-width: 400px;
         flex: 1;
         margin-right: 1rem;
-
-        img {
-            max-width: 100%;
-        }
     }
 }
