Move user module

--- a/resources/assets/sass/styles.scss
+++ b/resources/assets/sass/styles.scss
@@ -9,6 +9,7 @@
 @import 'components/explanations';
 @import 'components/tables';
 @import 'components/timeline';
+@import 'components/user';
 
 @import 'layout/header';
 @import 'layout/navbar';
