Fix avatar sizes in comments

--- a/resources/assets/sass/components/_comments.scss
+++ b/resources/assets/sass/components/_comments.scss
@@ -15,6 +15,11 @@
 
         figure {
             margin-right: 1em;
+            max-width: 50px;
+
+            img {
+                max-width: 100%;
+            }
         }
     }
 
