Fix latency on requests.index
Signed-off-by: Maxime Fabre <ehtnam6@gmail.com>

--- a/resources/views/_partials/tables/requests.twig
+++ b/resources/views/_partials/tables/requests.twig
@@ -23,7 +23,7 @@
                     <a href="{{ url('requests.show', request.identifier) }}">{{ request.name }}</a>
                 </td>
                 <td class="text-right">{{ request.votes.count() }}</td>
-                <td class="text-right">{{ request.comments.count() }}</td>
+                <td class="text-right">{{ request.comments().count() }}</td>
                 <td class="text-right">{{ percentage(request.approval) }}</td>
                 <td class="text-center">{{ request.versions.first().version }}</td>
                 <td class="text-center">{{ request.created_at.toDateString() }}</td>
