Close #62, #63 - Default table sortings
Signed-off-by: Maxime Fabre <ehtnam6@gmail.com>

--- a/resources/views/_partials/tables/requests.twig
+++ b/resources/views/_partials/tables/requests.twig
@@ -12,7 +12,7 @@
             <th class="text-right"># of comments</th>
             <th class="text-right">Approval %</th>
             <th class="text-center">Version</th>
-            <th class="text-center">Last update</th>
+            <th class="text-center default-sort">Last update</th>
             <th class="text-center">Status</th>
         </tr>
         </thead>
