--- a/resources/views/users/index.twig
+++ b/resources/views/users/index.twig
@@ -15,7 +15,7 @@
                     <th>User</th>
                     <th class="text-right">Voted YES</th>
                     <th class="text-right">Voted NO</th>
-                    <th class="text-right"># of votes</th>
+                    <th class="text-right default-sort"># of votes</th>
                     <th class="text-right"><abbr title="How many RFCs the user has approved of">Approval %</abbr></th>
                     <th class="text-right">
                         <abbr title="How many RFCs an user has approved of that other users also approved of in their majority">Hivemind %</abbr>
@@ -48,7 +48,7 @@
                 <tr>
                     <th>User</th>
                     <th class="text-right">Created RFCs</th>
-                    <th class="text-right">Approved RFCs</th>
+                    <th class="text-right default-sort">Approved RFCs</th>
                     <th class="text-right"><abbr title="Percentage of created RFCs that got approved">Success %</abbr>
                     </th>
                 </tr>
