Close #60 - Add inactive status for RFCs
Signed-off-by: Maxime Fabre <ehtnam6@gmail.com>

--- a/resources/views/_partials/tables/requests.twig
+++ b/resources/views/_partials/tables/requests.twig
@@ -27,7 +27,7 @@
                 <td class="text-right">{{ percentage(request.approval) }}</td>
                 <td class="text-center">{{ request.versions.first().version }}</td>
                 <td class="text-center">{{ request.created_at.toDateString() }}</td>
-                <td class="text-center {{ ['danger', '', '', '', 'success'][request.status] }}">{{ request.status_label }}</td>
+                <td class="text-center {{ ['danger', '', '', 'info', 'success', 'active'][request.status] }}">{{ request.status_label }}</td>
             </tr>
         {% endfor %}
         </tbody>
