Close #67 - Add Twitter button

--- a/resources/views/_layouts/partials/footer.twig
+++ b/resources/views/_layouts/partials/footer.twig
@@ -1,4 +1,5 @@
 <footer class="layout-footer">
+    {% include '_layouts/partials/social.twig' %}
     <section>
         <p>
             All number are approximations and are not representative of anybody being actually in the right or wrong.<br>
