--- a/resources/views/companies/index.twig
+++ b/resources/views/companies/index.twig
@@ -13,13 +13,15 @@
             <tr>
                 <th>Company</th>
                 <th class="default-sort"># of users</th>
+                <th>Representation</th>
             </tr>
             </thead>
             <tbody>
-            {% for company in companies %}
+            {% for company in companies if company.users.count() %}
                 <tr>
                     <td>{{ company.name }}</td>
                     <td>{{ company.users.count() }}</td>
+                    <td>{{ percentage(company.representation) }}</td>
                 </tr>
             {% endfor %}
             </tbody>
