--- a/resources/views/_partials/user.twig
+++ b/resources/views/_partials/user.twig
@@ -5,7 +5,7 @@
     </h2>
     <h3>
         {{ user.full_name }}
-        {% if user.company %}, from <strong>{{ user.company }}</strong>{% endif %}
+        {% if user.company %}, from <strong>{{ user.company.name }}</strong>{% endif %}
     </h3>
     <div class="btn-group">
         <a target="_blank" class="btn btn-default btn-xs" href="http://people.php.net/{{ user.name }}"><i class="fa fa-book"></i> PHP</a>
