--- a/resources/views/companies/index.twig
+++ b/resources/views/companies/index.twig
@@ -7,6 +7,8 @@
 {% endblock %}
 
 {% block content %}
+    {% include '_partials/search.twig' %}
+
     <div class="table-responsive">
         <table class="table">
             <thead>
@@ -19,7 +21,9 @@
             <tbody>
             {% for company in companies if company.users.count() %}
                 <tr>
-                    <td>{{ company.name }}</td>
+                    <td>
+                        <a href="{{ url('companies.show', company.identifier) }}">{{ company.name }}</a>
+                    </td>
                     <td>{{ company.users.count() }}</td>
                     <td>{{ percentage(company.representation) }}</td>
                 </tr>
