--- a/resources/views/requests/show.twig
+++ b/resources/views/requests/show.twig
@@ -27,6 +27,7 @@
             <div class="btn-group">
                 <a target="_blank" class="btn btn-default btn-xs" href="{{ request.link }}"><i class="fa fa-book"></i> Wiki</a>
                 {% if request.pull_request %}<a target="_blank" class="btn btn-default btn-xs" href="{{ request.pull_request }}"><i class="fa fa-github"></i> Pull request</a>{% endif %}
+                <a target="_blank" class="btn btn-default btn-xs" href="https://www.reddit.com/submit?url={{ request.link }}"><i class="fa fa-reddit"></i> Reddit</a>
             </div>
         </li>
     </ul>
