Add icons to navbar

--- a/resources/assets/sass/layout/_navbar.scss
+++ b/resources/assets/sass/layout/_navbar.scss
@@ -9,4 +9,8 @@
         text-transform: lowercase;
         transition: color $transition;
     }
+
+    i {
+        margin-right: 0.25em;
+    }
 }
