--- a/resources/views/companies/index.twig
+++ b/resources/views/companies/index.twig
@@ -14,8 +14,10 @@
             <thead>
             <tr>
                 <th>Company</th>
-                <th class="default-sort"># of users</th>
-                <th>Representation</th>
+                <th># of users</th>
+                <th class="default-sort">
+                    <abbr title="How many voting members does this company have VS all voting members">Representation %</abbr>
+                </th>
             </tr>
             </thead>
             <tbody>
