Count votes not users for company repartition

--- a/resources/views/companies/index.twig
+++ b/resources/views/companies/index.twig
@@ -16,7 +16,7 @@
                 <th>Company</th>
                 <th># of users</th>
                 <th class="default-sort">
-                    <abbr title="How many voting members does this company have VS all voting members">Representation %</abbr>
+                    <abbr title="How many % of all the votes does this company represent">Representation %</abbr>
                 </th>
             </tr>
             </thead>
