Close #78 - Change wording in profile page

--- a/resources/views/users/show.twig
+++ b/resources/views/users/show.twig
@@ -21,7 +21,7 @@
         </li>
         {% if user.total_votes %}
             <li>
-                Voted <strong>{{ user.total_votes }}</strong> times, and has been correct
+                Voted <strong>{{ user.total_votes }}</strong> times, and has been on the winning side
                 <strong>{{ percentage(user.hivemind) }}</strong> of the time.
             </li>
             <li>
