Show targeted/implemented version of RFCs
* Add targeted PHP version extraction
* Add field to Request

--- a/resources/views/_partials/tables/requests.twig
+++ b/resources/views/_partials/tables/requests.twig
@@ -12,6 +12,7 @@
             <th class="text-right"># of comments</th>
             <th class="text-right">Approval %</th>
             <th class="text-center">Version</th>
+            <th class="text-center">Target</th>
             <th class="text-center default-sort">Last update</th>
             <th class="text-center">Status</th>
         </tr>
@@ -26,6 +27,7 @@
                 <td class="text-right">{{ request.comments().count() }}</td>
                 <td class="text-right">{{ percentage(request.approval) }}</td>
                 <td class="text-center">{{ request.versions.first().version }}</td>
+                <td class="text-center">{{ request.target }}</td>
                 <td class="text-center">{{ request.created_at.toDateString() }}</td>
                 <td class="text-center {{ ['danger', '', '', 'info', 'success', 'active'][request.status] }}">{{ request.status_label }}</td>
             </tr>
