--- a/resources/views/_layouts/partials/navbar.twig
+++ b/resources/views/_layouts/partials/navbar.twig
@@ -1,7 +1,8 @@
 {% set icons = {
     users: 'user',
     events: 'clock-o',
-    requests: 'comment',
+    requests: 'send',
+    comments: 'comments',
     companies: 'building',
     pages: 'question',
 } %}
