--- a/resources/views/comments/index.twig
+++ b/resources/views/comments/index.twig
@@ -2,7 +2,24 @@
 {% set title = 'Mailing list' %}
 
 {% block content %}
-    {% for comment in comments %}
-        {{ comment.name }}
-    {% endfor %}
+    <table class="table">
+        <thead>
+        <tr>
+            <th>Subject</th>
+            <th>User</th>
+            <th>Comments</th>
+            <th>Date</th>
+        </tr>
+        </thead>
+        <tbody>
+            {% for comment in comments %}
+                <tr>
+                    <td>{{ comment.name }}</td>
+                    <td>{{ comment.user.name }}</td>
+                    <td>{{ comment.children().count() }}</td>
+                    <td>{{ comment.created_at.diffForHumans() }}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
