Add slugs to threads

--- a/resources/views/threads/index.twig
+++ b/resources/views/threads/index.twig
@@ -12,7 +12,7 @@
                     </div>
                     <div class="media-body">
                         <h4 class="media-heading">
-                            <a href="{{ url('threads.index', thread.id) }}">
+                            <a href="{{ url('threads.show', thread.slug) }}">
                                 {{ thread.name }}
                             </a>
                         </h4>
