--- a/resources/views/_layouts/partials/navbar.twig
+++ b/resources/views/_layouts/partials/navbar.twig
@@ -2,7 +2,7 @@
     users: 'user',
     events: 'clock-o',
     requests: 'send',
-    threads: 'comments',
+    groups: 'comments',
     companies: 'building',
     pages: 'question',
 } %}
