Work on groups and threads

--- a/resources/views/_partials/tables/requests.twig
+++ b/resources/views/_partials/tables/requests.twig
@@ -3,7 +3,7 @@
         <thead>
         {% if table_name %}
             <tr>
-                <th class="text-center" colspan="7">{{ table_name }}</th>
+                <th class="text-center" colspan="8">{{ table_name }}</th>
             </tr>
         {% endif %}
         <tr>
@@ -24,7 +24,7 @@
                     <a href="{{ url('requests.show', request.identifier) }}">{{ request.name }}</a>
                 </td>
                 <td class="text-right">{{ request.votes.count() }}</td>
-                <td class="text-right">{{ request.thread.comments().count() }}</td>
+                <td class="text-right">{{ request.comments().count() }}</td>
                 <td class="text-right">{{ percentage(request.approval) }}</td>
                 <td class="text-center">{{ request.versions.first().version }}</td>
                 <td class="text-center">{{ request.target }}</td>
