--- a/resources/views/_partials/comment.twig
+++ b/resources/views/_partials/comment.twig
@@ -1,7 +1,7 @@
 <article class="comment" id="{{ comment.xref }}">
     <header class="comment__header">
         <figure>
-            <img src="{{ comment.user.avatar(50) }}" alt="{{ comment.user.name }}">
+            <img src="{{ comment.user.avatar(50) }}" alt="{{ comment.user.identifier }}">
         </figure>
         <h4>
             <a href="{{ url('users.show', comment.user.identifier) }}">{{ comment.user.display_name }}</a><br>
