--- a/resources/views/events/events/vote_up.twig
+++ b/resources/views/events/events/vote_up.twig
@@ -1,3 +1,3 @@
 <a href="{{ url('users.show', event.eventable.user.identifier) }}">{{ event.eventable.user.display_name }}</a>
 voted <strong>{{ choice(event.eventable.question, event.eventable) }}</strong>
-on <a href="{{ url('requests.show', event.eventable.question.request.identifier) }}">{{ event.eventable.question.request.name }}</a>
+on <a href="{{ url('requests.show', event.eventable.request.identifier) }}">{{ event.eventable.request.name }}</a>
